tests/e2e/validation-webhook/validation/compilation-failure/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: compilation-failure
spec:
  steps: 
  - try:
    - create:
        file: ./policy.yaml
        expect:
        - check:
            ($error): |-
              admission webhook "kyverno-authz-server-validation-authorizationpolicy.kyverno.svc" denied the request: AuthorizationPolicy.envoy.kyverno.io "compilation-failure" is invalid: spec.deny[0].response: Invalid value: "envoy.Allowed() + 1\n": ERROR: <input>:1:17: found no matching overload for '_+_' applied to '(envoy.service.auth.v3.OkHttpResponse, int)'
               | envoy.Allowed() + 1
               | ................^
